<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>cms</groupId>
	<artifactId>web</artifactId>
	<packaging>war</packaging>
	<version>1.0.0</version>
	<name>web</name>
	<url>http://www.egovframe.go.kr</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

	<properties>
		<spring.maven.artifact.version>4.3.16.RELEASE</spring.maven.artifact.version>
		<egovframework.rte.version>3.8.0</egovframework.rte.version>
		<downloadSources>true</downloadSources>
	</properties>

	<repositories>
		<repository>
			<id>mvn2</id>
			<url>http://repo1.maven.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>egovframe</id>
			<url>http://maven.egovframe.kr:8080/maven/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>
	
	<pluginRepositories>
		<pluginRepository>
			<id>central</id>
			<url>https://repo.maven.apache.org/maven2/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
		</pluginRepository>
	</pluginRepositories>
	
	<dependencies>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.ptl.mvc</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.psl.dataaccess</artifactId>
			<version>${egovframework.rte.version}</version>
			<exclusions>
                <exclusion>
					<artifactId>mybatis</artifactId>
                    <groupId>org.mybatis</groupId>
                </exclusion>
            </exclusions>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.idgnr</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.property</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		<dependency>
			<groupId>egovframework.rte</groupId>
			<artifactId>egovframework.rte.fdl.logging</artifactId>
			<version>${egovframework.rte.version}</version>
		</dependency>
		<dependency>
            <groupId>egovframework.rte</groupId>
            <artifactId>egovframework.rte.fdl.excel</artifactId>
            <version>${egovframework.rte.version}</version>
        </dependency>

		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr</artifactId>
			<version>3.0.1</version>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<scope>provided</scope>
			<version>2.5</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>1.2</version>
		</dependency>

		<dependency>
			<groupId>taglibs</groupId>
			<artifactId>standard</artifactId>
			<version>1.1.2</version>
		</dependency>

		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.0.10</version>
		</dependency>
		<dependency>
			<groupId>opensymphony</groupId>
			<artifactId>sitemesh</artifactId>
			<version>2.4.1</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.ajaxtags</groupId>
			<artifactId>ajaxtags-resources</artifactId>
			<version>1.5.7</version>
		</dependency>
		<!-- oracle  -->
		 <!-- <dependency>
            <groupId>ojdbc</groupId>
            <artifactId>ojdbc</artifactId>
            <version>14</version>
            <scope>system</scope>
            <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc14-10.2.0.4.0.jar</systemPath>
        </dependency> -->
          
        <!--   mariadb driver -->
		  <dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>2.5.4</version>
		  </dependency>
          
          <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <!-- fileupload -->
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>
		<dependency>
			<groupId>org.codehaus.jackson</groupId>
			<artifactId>jackson-mapper-asl</artifactId>
			<version>1.9.13</version>
		</dependency>
       <dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.8.11</version>
		</dependency>
 		<dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.lazyluke</groupId>
 			<artifactId>log4jdbc-remix</artifactId>
 			<version>0.2.7</version>
 		</dependency>
 		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.5</version>
		</dependency>
		<!-- SLF4J Logj4 1.x Bridge -->  
		<dependency>
			<groupId>org.slf4j</groupId> 
			<artifactId>slf4j-log4j12</artifactId> 
			<version>1.7.5</version>
		</dependency>
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
 		<!-- <dependency>
 			<groupId>net.sf.ehcache</groupId>
 			<artifactId>ehcache-core</artifactId>
 			<version>2.6.11</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
 			<version>4.1.6.RELEASE</version>
 		</dependency> -->
 		<dependency>
			<groupId>net.sf.ehcache</groupId>
			<artifactId>ehcache-core</artifactId>
			<version>2.5.7</version>
		</dependency>

		<!-- EgovDateUtil 관련 -->
		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>4.8</version>
		</dependency>

		<!-- EgovFileScrty 암호화 -->
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.6</version>
		</dependency>
		
		<dependency>
			<groupId>ehcache</groupId>
			<artifactId>ehcache</artifactId>
			<version>1.1.3</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ehcache-spring-annotations-1.1.3.jar</systemPath>
		</dependency>
		
		<!-- mybatis -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.4.1</version>
		</dependency>
		<!-- mybatis-spring -->
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis-spring</artifactId>
			<version>1.3.0</version>
		</dependency>
		
		<dependency>
			<groupId>spring-social-security</groupId>
			<artifactId>spring-social-security</artifactId>
			<version>1.1.4</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/spring-social-security-1.1.4.RELEASE.jar</systemPath>
		</dependency>
		
		<dependency>
			<groupId>jcifs</groupId>
			<artifactId>jcifs</artifactId>
			<version>1.3.18</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jcifs-1.3.18.jar</systemPath>
		</dependency>
		
		<dependency>
			<groupId>NiceID</groupId>
			<artifactId>NiceID</artifactId>
			<version>1.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/NiceID.jar</systemPath>
		</dependency>
		
		<dependency>
			<groupId>gpin-proxy</groupId>
			<artifactId>gpin-proxy</artifactId>
			<version>1.5</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/gpin-proxy-1.5.jar</systemPath>
		</dependency>
		
		<dependency>
			<groupId>jInstagram</groupId>
			<artifactId>jInstagram</artifactId>
			<version>1.1.8</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/jInstagram-1.1.8.jar</systemPath>
		</dependency>

		<!-- 실제 암호화 관련 jar -->
		<dependency>
			<groupId>xecuredb</groupId>
			<artifactId>xecuredb</artifactId>
			<version>2.7</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/xdsp_jni.jar</systemPath>
		</dependency>

		<!-- 서울시 메일전송 jar -->
		<dependency>
			<groupId>relayclient</groupId>
			<artifactId>relayclient</artifactId>
			<version>2.7</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/relayclient.jar</systemPath>
		</dependency>

		<!-- 본인확인 서비스 관련 jar -->
		<dependency>
			<groupId>sciSecuPCC</groupId>
			<artifactId>sciSecuPCC</artifactId>
			<version>2.0</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/sciSecuPCC.jar</systemPath>
		</dependency>

		<!-- FTP 파일전송 관련 jar -->
		<dependency>
			<groupId>NetComponents</groupId>
			<artifactId>NetComponents</artifactId>
			<version>1.3.8</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/NetComponents_1.3.8.jar</systemPath>
		</dependency>

		<!-- 결재모듈 관련 jar XPayClient-->
		<dependency>
			<groupId>XPayClient</groupId>
			<artifactId>XPayClient</artifactId>
			<version>2.7</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/XPayClient.jar</systemPath>
		</dependency>

		<!-- 결재모듈 관련 jar commons-logging-->
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>2.7</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-logging.jar</systemPath>
		</dependency>

		<!-- 결재모듈 관련 jar commons-httpclient-3.1-->
		<dependency>
			<groupId>commons-httpclient-3.1</groupId>
			<artifactId>commons-httpclient-3.1</artifactId>
			<version>3.1</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-httpclient-3.1.jar</systemPath>
		</dependency>

		<!-- 결재모듈 관련 jar commons-codec-1.3-->
		<dependency>
			<groupId>commons-codec-1.3</groupId>
			<artifactId>commons-codec-1.3</artifactId>
			<version>1.3</version>
			<scope>system</scope>
			<systemPath>${basedir}/src/main/webapp/WEB-INF/lib/commons-codec-1.3.jar</systemPath>
		</dependency>

		<dependency>
            <groupId>org.twitter4j</groupId>
            <artifactId>twitter4j-core</artifactId>
            <version>[4.0,)</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.twitter4j/twitter4j-stream -->
		<dependency>
		    <groupId>org.twitter4j</groupId>
		    <artifactId>twitter4j-stream</artifactId>
		    <version>4.0.4</version>
		</dependency>
        

		<dependency>
		  <groupId>org.jdom</groupId>
		  <artifactId>jdom2</artifactId>
		  <version>2.0.5</version>
		</dependency>

		<dependency>
			<groupId>org.imgscalr</groupId>
			<artifactId>imgscalr-lib</artifactId>
			<version>4.2</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>2.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>2.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>2.10.4</version>
		</dependency>
		<dependency>
			<groupId>org.quartz-scheduler</groupId>
			<artifactId>quartz</artifactId>
			<version>2.1.7</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.2</version>
		</dependency>
				
<!-- 		<dependency> -->
<!-- 			<groupId>org.eclipse.jetty</groupId> -->
<!-- 			<artifactId>jetty-jndi</artifactId> -->
<!-- 			<version>8.1.14.v20131031</version> -->
<!-- 		</dependency> -->
<!-- 		<dependency> -->
<!-- 			<groupId>org.eclipse.jetty</groupId> -->
<!-- 			<artifactId>jetty-jndi</artifactId> -->
<!-- 			<version>8.1.14.v20131031</version> -->
<!-- 		</dependency> -->



<!-- sns 시작 -->
		<dependency>
		    <groupId>org.springframework.social</groupId>
		    <artifactId>spring-social-core</artifactId>
		    <version>1.1.4.RELEASE</version>
		</dependency>
		<dependency>
		  <groupId>org.springframework.social</groupId>
		  <artifactId>spring-social-web</artifactId>
		  <version>1.1.4.RELEASE</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.security.oauth</groupId>
		    <artifactId>spring-security-oauth2</artifactId>
		    <version>2.0.10.RELEASE</version>
		    <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.springframework</groupId>
					<artifactId>spring-core</artifactId>
                </exclusion>
            </exclusions>
		</dependency>
		<dependency>
		  <groupId>org.springframework.social</groupId>
		  <artifactId>spring-social-facebook</artifactId>
		  <version>2.0.3.RELEASE</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.social</groupId>
		    <artifactId>spring-social-twitter</artifactId>
		    <version>1.1.2.RELEASE</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-youtube -->
		<dependency>
		    <groupId>com.google.apis</groupId>
		    <artifactId>google-api-services-youtube</artifactId>
		    <version>v3-rev178-1.22.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.fernandospr</groupId>
 			<artifactId>javapns-jdk16</artifactId>
			<version>2.2.1</version>
		</dependency>
		<dependency>
		    <groupId>com.ganyo</groupId>
		    <artifactId>gcm-server</artifactId>
		    <version>1.0.2</version>
	    </dependency>
	    <dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1.1</version>
	    </dependency>

<dependency>
    <groupId>org.keycloak</groupId>
    <artifactId>keycloak-servlet-filter-adapter</artifactId>
    <version>11.0.2</version>
</dependency>

<dependency>
    <groupId>org.keycloak</groupId>
    <artifactId>keycloak-authz-client</artifactId>
    <version>11.0.2</version>
</dependency>

<dependency>
    <groupId>org.keycloak</groupId>
    <artifactId>keycloak-spring-security-adapter</artifactId>
    <version>11.0.2</version>
</dependency>


<dependency>
    <groupId>org.osgi</groupId>
    <artifactId>org.osgi.core</artifactId>
    <version>6.0.0</version>
    <scope>provided</scope>
</dependency>

<dependency>
    <groupId>org.osgi</groupId>
    <artifactId>org.osgi.service.http.whiteboard</artifactId>
    <version>1.1.0</version>
    <scope>provided</scope>
</dependency>

<!-- sns 끝 -->

	</dependencies>


	<build>
		<directory>${basedir}/target</directory>
		<finalName>${artifactId}-${version}</finalName>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/resources-${build.environment}</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
			    <groupId>org.apache.tomcat.maven</groupId>
			    <artifactId>tomcat7-maven-plugin</artifactId>
			    <version>2.2</version>
			    <configuration>
			    	<port>80</port>
			    	<path>/</path>
			    	<systemProperties>
	                    <JAVA_OPTS>-Xms64m -Xmx768m -XX:MaxPermSize=256m</JAVA_OPTS>
	                </systemProperties>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-resources-plugin</artifactId>
			    <version>2.7</version>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-war-plugin</artifactId>
	             <version>2.4</version>
	            <configuration>
	            	<warSourceDirectory>src/main/webapp</warSourceDirectory>
	            </configuration>
	        </plugin>
		</plugins>
	</build>
	
	<profiles>
	  <profile>
		  <!-- 로컬 개발환경에서 사용하는 기본 프로파일 -->
		  <id>local</id>
		  <properties>
			  <build.environment>local</build.environment>
		  </properties>
		  <activation>
			  <activeByDefault>true</activeByDefault>
		  </activation>
	  </profile>
	  <profile>
		  <!-- 개발환경용 프로파일 -->
		  <id>devel</id>
		  <properties>
			  <build.environment>devel</build.environment>
		  </properties>
	  </profile>
    </profiles>
</project>